==> imoldovavan/mcHF-SDR/drivers/ui/lcd/ui_lcd_hy28.c <==
#include "mchf_board.h"
#include <stdio.h>
#include <eeprom.h>
#include "ui_lcd_hy28_fonts.h"
#include "ui_lcd_hy28.h"
#include "audio_driver.h"

void UiLcdHy28_BacklightInit(void)
{
   GPIO_InitTypeDef  GPIO_InitStructure;

   // Set as output
   GPIO_InitStructure.GPIO_Pin = LCD_BACKLIGHT;
   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
   GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
   GPIO_Init(LCD_BACKLIGHT_PIO, &GPIO_InitStructure);

   // Backlight off
   LCD_BACKLIGHT_PIO->BSRRH = LCD_BACKLIGHT;
}

void UiLcdHy28_SpiInit()
{
   GPIO_InitTypeDef GPIO_InitStructure;
   SPI_InitTypeDef  SPI_InitStructure;

   // Enable the SPI periph
   RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);

   // Common SPI settings
   GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;

   // SPI SCK pin configuration
   GPIO_InitStructure.GPIO_Pin = LCD_SCK;
   GPIO_Init(LCD_SCK_PIO, &GPIO_InitStructure);

   // SPI  MOSI pins configuration
   GPIO_InitStructure.GPIO_Pin =  LCD_MOSI;
   GPIO_Init(LCD_MOSI_PIO, &GPIO_InitStructure);

   // SPI  MISO pins configuration
   GPIO_InitStructure.GPIO_Pin =  LCD_MISO;
   GPIO_Init(LCD_MISO_PIO, &GPIO_InitStructure);

   // Set as alternative
   GPIO_PinAFConfig(LCD_SCK_PIO,  LCD_SCK_SOURCE,  GPIO_AF_SPI2);
   GPIO_PinAFConfig(LCD_MISO_PIO, LCD_MISO_SOURCE, GPIO_AF_SPI2);
   GPIO_PinAFConfig(LCD_MOSI_PIO, LCD_MOSI_SOURCE, GPIO_AF_SPI2);

   // SPI configuration
   SPI_I2S_DeInit(SPI2);
   SPI_InitStructure.SPI_Direction       = SPI_Direction_2Lines_FullDuplex;
   SPI_InitStructure.SPI_DataSize          = SPI_DataSize_8b;
   SPI_InitStructure.SPI_CPOL             = SPI_CPOL_High;
   SPI_InitStructure.SPI_CPHA             = SPI_CPHA_2Edge;
   SPI_InitStructure.SPI_NSS             = SPI_NSS_Soft;
   SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;   // max speed presc_8 with 50Mhz GPIO, max 4 with 100 Mhz
   SPI_InitStructure.SPI_FirstBit          = SPI_FirstBit_MSB;
   SPI_InitStructure.SPI_Mode             = SPI_Mode_Master;
   SPI_Init(SPI2, &SPI_InitStructure);

   // Enable SPI2
   SPI_Cmd(SPI2, ENABLE);

   // Common misc pins settings
   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

   // Configure GPIO PIN for Chip select
   GPIO_InitStructure.GPIO_Pin = LCD_CS;
   GPIO_Init(LCD_CS_PIO, &GPIO_InitStructure);

   // Configure GPIO PIN for Reset
   GPIO_InitStructure.GPIO_Pin = LCD_RESET;
   GPIO_Init(LCD_RESET_PIO, &GPIO_InitStructure);

   // Deselect : Chip Select high
   GPIO_SetBits(LCD_CS_PIO, LCD_CS);
}

void UiLcdHy28_SpiDeInit()
{
   GPIO_InitTypeDef GPIO_InitStructure;

   SPI_Cmd(SPI2, DISABLE);
   SPI_I2S_DeInit(SPI2);

   // Set as inputs
   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;

   // SPI SCK pin configuration
   GPIO_InitStructure.GPIO_Pin = LCD_SCK;
   GPIO_Init(LCD_SCK_PIO, &GPIO_InitStructure);

   // SPI  MOSI pins configuration
   GPIO_InitStructure.GPIO_Pin =  LCD_MOSI;
   GPIO_Init(LCD_MOSI_PIO, &GPIO_InitStructure);

   // SPI  MISO pins configuration
   GPIO_InitStructure.GPIO_Pin =  LCD_MISO;
   GPIO_Init(LCD_MISO_PIO, &GPIO_InitStructure);

   // Configure GPIO PIN for Chip select
   GPIO_InitStructure.GPIO_Pin = LCD_CS;
   GPIO_Init(LCD_CS_PIO, &GPIO_InitStructure);
}

void UiLcdHy28_WriteIndexSpi(unsigned char index)
{
   GPIO_ResetBits(LCD_CS_PIO, LCD_CS);

   UiLcdHy28_SendByteSpi(SPI_START | SPI_WR | SPI_INDEX);   /* Write : RS = 0, RW = 0       */
   UiLcdHy28_SendByteSpi(0);
   UiLcdHy28_SendByteSpi(index);

   GPIO_SetBits(LCD_CS_PIO, LCD_CS);
}

void UiLcdHy28_WriteDataSpi( unsigned short data)
{
   GPIO_ResetBits(LCD_CS_PIO, LCD_CS);

   UiLcdHy28_SendByteSpi(SPI_START | SPI_WR | SPI_DATA);    /* Write : RS = 1, RW = 0       */
   UiLcdHy28_SendByteSpi((data >>   8));                    /* Write D8..D15                */
   UiLcdHy28_SendByteSpi((data & 0xFF));                    /* Write D0..D7                 */

   GPIO_SetBits(LCD_CS_PIO, LCD_CS);
}

void UiLcdHy28_LcdClear(ushort Color)
{
   ulong i;

   UiLcdHy28_SetCursorA(0,0);

   if(sd.use_spi)
   {
      UiLcdHy28_WriteIndexSpi(0x0022);

      LCD_CS_PIO->BSRRH = LCD_CS;
      UiLcdHy28_WriteDataSpiStart();

      for( i = 0; i < (MAX_X * MAX_Y); i++ )
         UiLcdHy28_WriteDataOnly(Color);

      LCD_CS_PIO->BSRRL = LCD_CS;
   }
   else
   {
      LCD_REG = 0x22;

      for( i = 0; i < (MAX_X * MAX_Y); i++ )
         LCD_RAM = Color;
   }
}

void UiLcdHy28_WriteRAM_Prepare(void)
{
   if(sd.use_spi)
   {
      UiLcdHy28_WriteIndexSpi(0x0022);
      GPIO_ResetBits(LCD_CS_PIO, LCD_CS);
      UiLcdHy28_WriteDataSpiStart();
   }
   else
      LCD_REG = 0x22;
}

void UiLcdHy28_DrawStraightLine(ushort x, ushort y, ushort Length, uchar Direction,ushort color)
{
   uint32_t i = 0;

   UiLcdHy28_SetCursorA(x, y);

   if(Direction == LCD_DIR_VERTICAL)
   {
      UiLcdHy28_WriteRAM_Prepare();

      for(i = 0; i < Length; i++)
         UiLcdHy28_WriteDataOnly(color);

      if(sd.use_spi)
         GPIO_SetBits(LCD_CS_PIO, LCD_CS);
   }
   else
   {
      for(i = 0; i < Length; i++)
      {
         UiLcdHy28_WriteRAM_Prepare();
         UiLcdHy28_WriteDataOnly(color);

         if(sd.use_spi)
            GPIO_SetBits(LCD_CS_PIO, LCD_CS);

         x++;
         UiLcdHy28_SetCursorA(x, y);
      }
   }
}

void UiLcdHy28_DrawHorizLineWithGrad(ushort x, ushort y, ushort Length,ushort gradient_start)
{
   uint32_t i = 0,j = 0;
   ushort     k = gradient_start;

   for(i = 0; i < Length; i++)
   {
      UiLcdHy28_SetCursorA(x, y);

      UiLcdHy28_WriteRAM_Prepare();
      UiLcdHy28_WriteDataOnly(RGB(k,k,k));

      if(sd.use_spi)
         GPIO_SetBits(LCD_CS_PIO, LCD_CS);

      j++;
      if(j == GRADIENT_STEP)
      {
         if(i < (Length/2))
            k += (GRADIENT_STEP/2);
         else
            k -= (GRADIENT_STEP/2);

         j = 0;
      }

      //non_os_delay();
      x++;
   }
}

void UiLcdHy28_DrawChar(ushort x, ushort y, char symb,ushort Color, ushort bkColor,const sFONT *cf)
{
   ulong       i,j;
   ushort     x_addr = x;
   ushort      a,b;
   uchar      fw = cf->Width;
   const short   *ch = (const short *)(&cf->table[(symb - 32) * cf->Height]);

   UiLcdHy28_SetCursorA(x_addr,y);

   // Next line
   for(i = 0; i < cf->Height; i++)
   {
      // Draw line
      for(j = 0; j < cf->Width; j++)
      {
         UiLcdHy28_WriteRAM_Prepare();

         a = ((ch[i] & ((0x80 << ((fw / 12 ) * 8)) >> j)));
         b = ((ch[i] &  (0x01 << j)));

         if((!a && (fw <= 12)) || (!b && (fw > 12)))
            UiLcdHy28_WriteDataOnly(bkColor);
         else
            UiLcdHy28_WriteDataOnly(Color);

         if(sd.use_spi)
            GPIO_SetBits(LCD_CS_PIO, LCD_CS);

         x_addr++;
         UiLcdHy28_SetCursorA(x_addr,y);
      }

      y++;
      x_addr = x;
      UiLcdHy28_SetCursorA(x_addr,y);
   }
}

uchar UiLcdHy28_Init(void)
{
   // Backlight
   UiLcdHy28_BacklightInit();

   // Select interface, spi first
   sd.use_spi = 1;

   // Try SPI Init
   UiLcdHy28_SpiInit();

   // Reset
   UiLcdHy28_Reset();

   // LCD Init
   if(UiLcdHy28_InitA() == 0)
      return;         // success, SPI found

   // SPI disable
   UiLcdHy28_SpiDeInit();

   // Select parallel
   sd.use_spi = 0;

   // Parallel init
   UiLcdHy28_ParallelInit();
   UiLcdHy28_FSMCConfig();

   // Reset
   UiLcdHy28_Reset();

   // LCD Init
   UiLcdHy28_InitA();   // on error here ?

   return 0;
}
