==> nizar33/Mchf_RS928_Mod_Firmware/mchf-eclipse/drivers/ui/lcd/ui_lcd_hy28.c <==
#include <stdio.h>
#include <stdlib.h>
#include "uhsdr_board.h"
#include "uhsdr_board_config.h"
#include "ui_lcd_hy28_fonts.h"
#include "ui_lcd_hy28.h"
#define hspiDisplay hspi2
#define SPI_DISPLAY SPI2
  #define USE_SPI_DMA
    #define USE_SPI_HAL
#define USE_SPI_DISPLAY
#define USE_DISPLAY_PAR
#include "spi.h"
        #include "fmc.h"
        #define MEM_Init() MX_FMC_Init()
        #include "fsmc.h"
        #define MEM_Init() MX_FSMC_Init()
    #define LCD_REG      (*((volatile unsigned short *) 0x60004000))
    #define LCD_REG      (*((volatile unsigned short *) 0x60000000))
    #define LCD_RAM      (*((volatile unsigned short *) 0x60000000))
    #define LCD_RAM      (*((volatile unsigned short *) 0x60020000))
    #define LCD_RAM      (*((volatile unsigned short *) 0x60004000))
#define MARKER LCD_D0
#define MARKER_PIO LCD_D0_PIO
#define Marker_ON  MARKER_PIO->BSRR=MARKER;
#define Marker_OFF MARKER_PIO->BSRR=MARKER<<16;
#define SPI_START   (0x70)              /* Start byte for SPI transfer        */
#define SPI_RD      (0x01)              /* WR bit 1 within start              */
#define SPI_WR      (0x00)              /* WR bit 0 within start              */
#define SPI_DATA    (0x02)              /* RS bit 1 within start byte         */
#define SPI_INDEX   (0x00)              /* RS bit 0 within start byte         */
#define SPI_TIMEOUT 100

void       UiLcdHy28_BacklightInit()
{
    GPIO_InitTypeDef           GPIO_InitStructure;

    // Set as output
    GPIO_InitStructure.Pin   =  LCD_BACKLIGHT;
    GPIO_InitStructure.Mode  =  GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.Pull  =  GPIO_NOPULL;
    GPIO_InitStructure.Speed =  GPIO_SPEED_FREQ_LOW;
    HAL_GPIO_Init( LCD_BACKLIGHT_PIO, &GPIO_InitStructure );

    // Backlight off
    GPIO_ResetBits( LCD_BACKLIGHT_PIO, LCD_BACKLIGHT );
}

void UiLcdHy28_SpiInit(bool hispeed, mchf_display_types_t display_type)
{
    lcd_spi_prescaler = hispeed?SPI_PRESCALE_LCD_HIGH:SPI_PRESCALE_LCD_DEFAULT;

#ifdef USE_GFX_ILI9486
    if (display_type == DISPLAY_RPI_SPI)
    {
        hspiDisplay.Init.CLKPolarity       = SPI_POLARITY_LOW;
        hspiDisplay.Init.CLKPhase          = SPI_PHASE_1EDGE;
        hspiDisplay.Init.NSS               = SPI_NSS_SOFT;
        hspiDisplay.Init.BaudRatePrescaler = lcd_spi_prescaler;

        if (HAL_SPI_Init(&hspiDisplay) != HAL_OK)
        {
            Error_Handler();
        }
    }
#endif

    // Enable the SPI periph
    // the main init is already done earlier, we need this if we want to use our own code to access SPI
    __HAL_SPI_ENABLE(&hspiDisplay);
}

void UiLcdHy28_SpiDeInit()
{

    // __HAL_SPI_DISABLE(&hspiDisplay);
    // HAL_SPI_DeInit(&hspiDisplay);

    GPIO_InitTypeDef GPIO_InitStructure;

    // Set as inputs
    GPIO_InitStructure.Mode		= GPIO_MODE_INPUT;
    GPIO_InitStructure.Speed	= GPIO_SPEED_FREQ_LOW;
    GPIO_InitStructure.Pull		= GPIO_NOPULL;

    if (mchf_display.lcd_cs_pio != NULL)
    {
        // Deconfigure GPIO PIN for Chip select
        GPIO_InitStructure.Pin		= mchf_display.lcd_cs;
        HAL_GPIO_Init(mchf_display.lcd_cs_pio, &GPIO_InitStructure);
    }
}

void UiLcdHy28_WriteIndexSpi(unsigned char index)
{
    UiLcdHy28_SpiLcdCsEnable();

    mchf_display.WriteIndexSpi_Prepare();

    UiLcdHy28_SpiSendByte(0);
    UiLcdHy28_SpiSendByte(index);

    UiLcdHy28_LcdSpiFinishTransfer();
}

void UiLcdHy28_WriteDataSpi( unsigned short data)
{
    UiLcdHy28_WriteDataSpiStart();
    UiLcdHy28_SpiSendByte((data >>   8));                    /* Write D8..D15                */
    UiLcdHy28_SpiSendByte((data & 0xFF));                    /* Write D0..D7   */
    UiLcdHy28_LcdSpiFinishTransfer();
}

static void UiLcdHy28_WriteRAM_Prepare()
{

    mchf_display.WriteRAM_Prepare();
}

void UiLcdHy28_LcdClear(ushort Color)
{
	uint32_t MAX_X = mchf_display.MAX_X; uint32_t MAX_Y = mchf_display.MAX_Y;
    UiLcdHy28_OpenBulkWrite( 0, MAX_X, 0, MAX_Y );
#ifdef USE_SPI_DMA
    if(UiLcdHy28_SpiDisplayUsed())
    {
        int idx;

        UiLcdHy28_BulkPixel_BufferInit();

        for (idx = 0; idx < MAX_X * MAX_Y; idx++)
        {
            UiLcdHy28_BulkPixel_Put(Color);
        }
        UiLcdHy28_BulkPixel_BufferFlush();
    }
    else
#endif
    {
        UiLcdHy28_BulkWriteColor( Color, MAX_X * MAX_Y );
    }
    UiLcdHy28_CloseBulkWrite();
}

void UiLcdHy28_DrawStraightLine ( ushort x,  ushort y,  ushort Length,  uchar Direction,  ushort color)
{
#ifdef  USE_GFX_RA8875
    /* Drawing Control Registers */
    #define LCD_DCR     (0x90)      /* Draw Line/Circle/Square Control Register */
    #define LCD_DLHSR0  (0x91)      /* Draw Line/Square Horizontal Start Address Register0 */
    #define LCD_DLHSR1  (0x92)      /* Draw Line/Square Horizontal Start Address Register1 */
    #define LCD_DLVSR0  (0x93)      /* Draw Line/Square Vertical Start Address Register0 */
    #define LCD_DLVSR1  (0x94)      /* Draw Line/Square Vertical Start Address Register1 */
    #define LCD_DLHER0  (0x95)      /* Draw Line/Square Horizontal End Address Register0 */
    #define LCD_DLHER1  (0x96)      /* Draw Line/Square Horizontal End Address Register1 */
    #define LCD_DLVER0  (0x97)      /* Draw Line/Square Vertical End Address Register0 */
    #define LCD_DLVER1  (0x98)      /* Draw Line/Square Vertical End Address Register1 */


    UiLcdRA8875_SetForegroundColor(color);

    uint16_t x_end, y_end;

    if (Direction == LCD_DIR_VERTICAL)
    {

    	x_end = x;
        y_end = y + Length;
    }
    else
    {
    	x_end = x + Length;
        y_end = y;
    }

    /* Horizontal + vertical start */
    UiLcdRa8875_WriteReg_16bit(LCD_DLHSR0, x);
    UiLcdRa8875_WriteReg_16bit(LCD_DLVSR0, y);
    UiLcdRa8875_WriteReg_16bit(LCD_DLHER0, x_end);
    UiLcdRa8875_WriteReg_16bit(LCD_DLVER0, y_end);

    UiLcdRa8875_WriteReg_8bit(LCD_DCR, 0x80);
#else
    UiLcdHy28_DrawStraightLineWidth( x, y, Length, 1, Direction, color);
#endif
}

void UiLcdHy28_DrawHorizLineWithGrad ( ushort x, ushort y, ushort Length, ushort gradient_start )
{
    uint32_t   i = 0,  j = 0;
    ushort     k = gradient_start;

    UiLcdHy28_OpenBulkWrite ( x, Length, y, 1 );
    UiLcdHy28_BulkPixel_BufferInit();
    for(i = 0; i < Length; i++)
    {
        UiLcdHy28_BulkPixel_Put( RGB(k,k,k) );
        j++;
        if( j == GRADIENT_STEP )
        {
            if( i < (Length/2))     k += (GRADIENT_STEP/2);
            else                    k -= (GRADIENT_STEP/2);
            j = 0;
        }
    }
    UiLcdHy28_BulkPixel_BufferFlush();
    UiLcdHy28_CloseBulkWrite();
}

void UiLcdHy28_DrawChar(ushort x, ushort y, char symb,ushort Color, ushort bkColor,const sFONT *cf)
{
//	if((x==0) && (y==302))		//this is only for catching the faulty new line drawing event for decoded text line.
//		debtxt++;
#ifdef USE_8bit_FONT
	switch(cf->BitCount)
	{
	case 1:		//1 bit font (basic type)
#endif
	    UiLcdHy28_DrawChar_1bit(x, y, symb, Color, bkColor, cf);
#ifdef USE_8bit_FONT
		break;
	case 8:	//8 bit grayscaled font
        UiLcdHy28_DrawChar_8bit(x, y, symb, Color, bkColor, cf);
	    break;
	}
#endif

}

uint8_t UiLcdHy28_Init()
{
    uint8_t retval          = DISPLAY_NONE;
    mchf_display.DeviceCode = 0x0000;
    UiLcdHy28_BacklightInit();

    for (uint16_t disp_idx = 1; retval == DISPLAY_NONE && display_infos[disp_idx].display_type != DISPLAY_NUM; disp_idx++)
    {
        mchf_display.DeviceCode = UiLcdHy28_DetectController(&display_infos[disp_idx]);

        if(mchf_display.DeviceCode != 0x0000)
        {
            retval = display_infos[disp_idx].display_type;
        }
    }

    mchf_display.display_type = retval;

#ifndef BOOTLOADER_BUILD
    switch(mchf_display.DeviceCode)
    {
		case 0x9486:
		case 0x9488:
					ts.Layout=&LcdLayouts[LcdLayout_480x320];
					disp_resolution = RESOLUTION_480_320;
					break;
		default:
					ts.Layout=&LcdLayouts[LcdLayout_320x240];
					disp_resolution = RESOLUTION_320_240;
					break;
    }
    mchf_display.MAX_X=ts.Layout->Size.x;
    mchf_display.MAX_Y=ts.Layout->Size.y;
#else
    switch(mchf_display.DeviceCode)
    {
    case 0x9486:
    case 0x9488:
    	mchf_display.MAX_X=480;
    	mchf_display.MAX_Y=320;
    	break;
    default:
    	mchf_display.MAX_X=320;
    	mchf_display.MAX_Y=240;
    	break;
    }
#endif

    return retval;
}
